# finops-cloud-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: Doc_Tecnico_finops-cloud-toolkit.docx  Flow_finops-cloud-toolkit.html  tagging-policy.md
reports/: report_generator.py
scripts/aws/: cost_explorer.py  idle_resources.py
tests/: test_cost_explorer.py
